[package]
name = "cyberu_cmaes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86" }
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-rand = { version = "0.14"}
ndarray-linalg = { version = "0.16" }
rand = { version = "0.8.5" }
rayon = { version = "1.10.0" }

# blas-src = { version = "0.9", features = ["openblas"] }